<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">VideoNote</string>
    <string name="action_camera">Camera</string>
    <string name="action_searcher">Search</string>
    <string name="action_share">Share</string>
    <string name="action_scan">Scan</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_order">Order</string>
    <string name="action_refresh">Refresh</string>

    <string name="homepage">Home</string>
    <string name="list">List</string>
    <string name="find">Discover</string>
    <string name="my">My</string>
    <string name="moment">Moment</string>
    <string name="rating">
        Rating：<xliff:g id="name">%1$s</xliff:g>
    </string>

    <string name="no_video">No Video</string>
</resources>
